--- a/Event_Client/src/app/app.component.html
+++ b/Event_Client/src/app/app.component.html
@@ -1,39 +1,40 @@
 <nav class="navbar navbar-light bg-light">
   <div class="container-fluid custem">
-        <div class="brands">
-        
-          <a  style="text-decoration: none; color:black; font-size:25px;font-weight:900px; margin-left:130px;" routerLink="/home">Event Management</a>
+    <div class="brands">
 
-        </div>
+      <a style="text-decoration: none; color:black; font-size:25px;font-weight:900px; margin-left:130px;"
+        routerLink="/home">Event Management</a>
 
-        <div class="links">
-          <ng-container *ngIf="token">
-            <ul style="display:flex;">
-              <i  style=" margin-right:10px; font-size: 20px;" class="bi bi-person-fill"></i>
-              <li style="margin-right:100px;" routerLink="/home">{{data.user.name}}</li>
+    </div>
 
-             
-              
-          
-              <li class="me-5 act" routerLink="/home">Home</li>
-              <li class="me-5 bo" routerLink="/profile">Events</li>
-              <li class="me-5 bo"routerLink="/add-events">AddEvents</li>
-              <li class="me-5 bo" routerLink="/trash">Trash</li>
-              <li class="me-5 bo" (click)="logout()">Logout</li>
-            </ul>
+    <div class="links">
+      <ng-container *ngIf="token && router.url != '/signup' && router.url !='/signin'">
+        <ul style="display:flex;">
+          <i style=" margin-right:10px; font-size: 20px;" class="bi bi-person-fill"></i>
+          <li style="margin-right:100px;" routerLink="/home">{{data.user.name}}</li>
 
-          </ng-container>
-          <ng-container *ngIf="!token">
-            <ul style="display:flex;">
-             
-              <li class="me-5 bo" routerLink="/signin">Signin</li>
-              <li class="me-5 bo" routerLink="/signup">Signup</li>
-            </ul>
 
-          </ng-container>
-         
 
-        </div>
+
+          <li class="me-5 act" routerLink="/home">Home</li>
+          <li class="me-5 bo" routerLink="/profile">Events</li>
+          <li class="me-5 bo" routerLink="/add-events">AddEvents</li>
+          <li class="me-5 bo" routerLink="/trash">Trash</li>
+          <li class="me-5 bo" (click)="logout()">Logout</li>
+        </ul>
+
+      </ng-container>
+      <ng-container *ngIf="!token && router.url == '/signup' || router.url =='/signin'">
+        <ul style="display:flex;">
+
+          <li class="me-5 bo" routerLink="/signin">Signin</li>
+          <li class="me-5 bo" routerLink="/signup">Signup</li>
+        </ul>
+
+      </ng-container>
+
+
+    </div>
   </div>
 </nav>
 
